[workspace]
members = [
  "bin/*",
  "crates/*",
  "lib/*",
  "xde",
  "xde/xde-link",
  "xde-tests",
]
default-members = [
  "bin/*",
  "crates/*",
  "lib/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/opte"

[workspace.dependencies]
# Internal crates
illumos-sys-hdrs = { path = "crates/illumos-sys-hdrs" }
kstat-macro = { path = "crates/kstat-macro" }
opte-api = { path = "crates/opte-api", default-features = false }

# Public library crates
opte = { path = "lib/opte", default-features = false }
opte-ioctl = { path = "lib/opte-ioctl" }
opteadm = { path = "bin/opteadm" }
oxide-vpc = { path = "lib/oxide-vpc", default-features = false }

# External dependencies
anyhow = "1.0"
bitflags = "2"
cfg-if = "1"
clap = { version = "4", features = ["derive", "string"] }
crc32fast = { version = "1", default-features = false }
ctor = "0.2"
dyn-clone = "1.0"
heapless = "0.8"
ipnetwork = { version = "0.20", default-features = false }
itertools = { version = "0.12", default-features = false }
libc = "0.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys" }
pcap-parser = "0.15"
postcard = { version = "1", features = ["alloc"], default-features = false }
quote = "1.0"
serde = { version = "1.0", features = ["alloc", "derive"], default-features = false }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.8"
slog-envlogger = "2.2"
slog-term = "2.9"
smoltcp = { version = "0.11", default-features = false }
syn = "2"
tabwriter = { version = "1", features = ["ansi_formatting"] }
thiserror = "1.0"
usdt = "0.5"
version_check = "0.9"
zerocopy = { version = "0.7", features = ["derive"] }
zone = { git = "https://github.com/oxidecomputer/zone" }
ztest = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
poptrie = { git = "https://github.com/oxidecomputer/poptrie", branch = "multipath" }

[profile.release]
debug = 2
