[workspace]
members = [
  "bench",
  "bin/*",
  "crates/*",
  "fuzz",
  "lib/*",
  "xde",
  "xde/xde-link",
  "xde-tests",
  "xtask",
]
default-members = [
  "bin/*",
  "crates/*",
  "lib/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/opte"

[workspace.dependencies]
# Internal crates
derror-macro = { path = "crates/derror-macro" }
illumos-sys-hdrs = { path = "crates/illumos-sys-hdrs" }
kstat-macro = { path = "crates/kstat-macro" }
opte-api = { path = "crates/opte-api", default-features = false }

# Shared internal testing resources
opte-test-utils = { path = "lib/opte-test-utils" }

# Public library crates
opte = { path = "lib/opte", default-features = false }
opte-ioctl = { path = "lib/opte-ioctl" }
opteadm = { path = "bin/opteadm" }
oxide-vpc = { path = "lib/oxide-vpc", default-features = false }

# External dependencies
anyhow = "1.0"
bitflags = "2"
cargo_metadata = "0.18"
cfg-if = "1"
clap = { version = "4", features = ["derive", "string", "wrap_help"] }
crc32fast = { version = "1", default-features = false }
criterion = "0.5"
ctor = "0.2"
darling = "0.20"
dyn-clone = "1.0"
heapless = "0.8"
ingot = { git = "https://github.com/oxidecomputer/ingot.git", rev = "044d62931a912589cb99890f193f00720841c1b9"}
ingot-types = { git = "https://github.com/oxidecomputer/ingot.git", rev = "044d62931a912589cb99890f193f00720841c1b9"}
ipnetwork = { version = "0.20", default-features = false }
itertools = { version = "0.13", default-features = false }
libc = "0.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys" }
nix = { version = "0.29", features = ["signal", "user"] }
pcap-parser = "0.15"
postcard = { version = "1", features = ["alloc"], default-features = false }
proc-macro2 = { version = "1" }
quote = "1.0"
rand = "0.8.5"
ron = "0.8"
serde = { version = "1.0", features = ["alloc", "derive"], default-features = false }
serde_json = { version = "1.0" }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.8"
slog-envlogger = "2.2"
slog-term = "2.9"
smoltcp = { version = "0.11", default-features = false }
syn = "2"
tabwriter = { version = "1", features = ["ansi_formatting"] }
thiserror = "1.0"
toml = "0.8"
usdt = "0.5"
version_check = "0.9"
zerocopy = { version = "0.8.0-alpha.16", features = ["derive"] }
zone = { git = "https://github.com/oxidecomputer/zone" }
ztest = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
poptrie = { git = "https://github.com/oxidecomputer/poptrie", branch = "multipath" }

[profile.release]
debug = 2
lto = true
