[package]
name = "opte-bench"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true


[features]
default = ["alloc"]
alloc = []

[dependencies]
criterion.workspace = true
opte.workspace = true
opte-test-utils.workspace = true
oxide-vpc.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
ctor.workspace = true
smoltcp.workspace = true

[target.'cfg(target_os = "illumos")'.dev-dependencies]
xde-tests = { path = "../xde-tests" }
ztest.workspace = true

[[bench]]
name = "userland"
harness = false

[[bench]]
name = "xde"
harness = false
