[package]
name = "opte-bench"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true


[features]
default = ["alloc"]
alloc = []

[dependencies]
anyhow.workspace = true
criterion.workspace = true
nix.workspace = true
rand.workspace = true
opte.workspace = true
opte-test-utils.workspace = true
oxide-vpc.workspace = true
serde = { default_features = true, workspace = true }
serde_json.workspace = true

[dev-dependencies]
clap.workspace = true
ctor.workspace = true
itertools = { workspace = true, features = ["use_std"] }
smoltcp.workspace = true

[target.'cfg(target_os = "illumos")'.dev-dependencies]
xde-tests = { path = "../xde-tests" }
ztest.workspace = true

[[bench]]
name = "userland"
harness = false

[[bench]]
name = "xde"
harness = false
