[package]
name = "opte-bench"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true


[features]
default = ["alloc"]
alloc = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
criterion.workspace = true
itertools = { workspace = true, features = ["use_std"] }
nix.workspace = true
rand.workspace = true
opte.workspace = true
opte-test-utils.workspace = true
oxide-vpc.workspace = true
serde = { default-features = true, workspace = true }
serde_json.workspace = true

[dev-dependencies]
ctor.workspace = true
hashbrown.workspace = true
smoltcp.workspace = true

[target.'cfg(target_os = "illumos")'.dependencies]
xde-tests = { path = "../xde-tests" }

[target.'cfg(target_os = "illumos")'.dev-dependencies]
ztest.workspace = true

[[bench]]
name = "userland"
harness = false

[[bench]]
name = "xde"
harness = false
