[package]
name = "opte-ioctl"
version = "0.1.0"
authors = ["Ryan Zezeski <ryan@oxide.computer>"]
edition = "2021"

[dependencies]
libc = "0.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys" }
opte = { path = "../opte", features = ["vpc"]}
postcard = "0.7.0"
serde = "1.0"
thiserror = "1.0.28"