[package]
name = "opte-ioctl"
version = "0.1.0"
authors = ["Ryan Zezeski <ryan@oxide.computer>"]
edition = "2021"

[dependencies]
libc = "0.2"
opte = { path = "../opte", default-features = false, features = ["api"]}
oxide-vpc = { path = "../oxide-vpc", default-features = false, features = ["api"] }
postcard = "0.7.0"
serde = "1.0"
thiserror = "1.0.28"

[target.'cfg(target_os = "illumos")'.dependencies]
libnet = { git = "https://github.com/oxidecomputer/netadm-sys" }