[package]
name = "opte"
version = "0.1.0"
authors = ["Ryan Zezeski <ryan@oxide.computer>"]
edition = "2021"

[features]
default = ["api", "std"]
api = []
engine = ["api"]
kernel = ["illumos-sys-hdrs/kernel"]
# This feature indicates that OPTE is being built with std. This is
# mostly useful to consumers of the API, providing convenient methods
# for working with the API types in a std context.
std = ["opte-api/std"]
#
# Used for declaring methods which are useful for integration testing.
#
test-help = []
usdt = ["std", "dep:usdt"]

[dependencies]
cfg-if = "0.1"
dyn-clone = "1.0.9"
heapless = "0.7.16"
illumos-sys-hdrs = { path = "../illumos-sys-hdrs" }
kstat-macro = { path = "../kstat-macro" }
opte-api = { path = "../opte-api", default-features = false }
postcard = { version = "0.7.0", features = ["alloc"], default-features = false }
usdt = { version = "0.3.5", optional = true }
zerocopy = "0.6.1"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.smoltcp]
version = "0.8.0"
default-features = false
#
# TODO Would defmt be of any use?
#
features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-ipv6", "proto-dhcpv4", "socket", "socket-raw"]

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
# Enable usdt probes for testing.
opte = { path = ".", features = ["usdt"] }
itertools = "0.10"
