[package]
name = "opteadm"
version = "0.2.0"
authors = ["Ryan Zezeski <ryan@oxide.computer>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
cfg-if = "0.1"
libc = "0.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys" }
# XXX For the time being opteadm needs to set the engine feature to
# get all the types. Once there types are move to their appropriate
# place this feature flag will be replaced/removed.
opte = { path = "../opte", features = ["engine"] }
opte-ioctl = { path = "../opte-ioctl" }
oxide-vpc = { path = "../oxide-vpc", features = ["api", "engine"] }
postcard = "0.7.0"
serde = "1.0"
structopt = "0.3.23"
thiserror = "1.0.28"
