[package]
name = "opte-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
zone = { git = "https://github.com/oxidecomputer/zone" }
ztest = { git = "https://github.com/oxidecomputer/falcon", branch = "ztest" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.0"
slog-envlogger = "2.2.0"
slog-async = "2.7.0"
anyhow = "1.0.67"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
opteadm = { path = "../opteadm" }
oxide-vpc = { path = "../oxide-vpc" }
