[package]
name = "opte-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
opteadm.workspace = true
oxide-vpc.workspace = true

anyhow.workspace = true
libnet.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-term.workspace = true
zone.workspace = true
ztest.workspace = true
