[package]
name = "xde-tests"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opte-ioctl.workspace = true
oxide-vpc.workspace = true

anyhow.workspace = true
libnet.workspace = true
rand.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-term.workspace = true
zone.workspace = true
ztest.workspace = true
