[package]
name = "xde"
version = "0.1.0"
authors = [
    "Ryan Goodfellow <ryan.goodfellow@oxide.computer>",
    "Ryan Zezeski <ryan@oxide.computer>"
]
# XXX convert to 2021
edition = "2018"

[dependencies]
illumos-sys-hdrs = { workspace = true, features = ["kernel"] }
opte = { workspace = true, features = ["engine", "kernel"], default-features = false }
oxide-vpc = { workspace = true, features = ["engine", "kernel"], default-features = false }

bitflags.workspace = true
postcard.workspace = true
serde.workspace = true

[lib]
crate-type = ["staticlib"]
name = "xde"

