[package]
name = "xde"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
illumos-sys-hdrs = { workspace = true, features = ["kernel"] }
opte = { workspace = true, features = ["engine", "kernel"], default-features = false }
oxide-vpc = { workspace = true, features = ["engine", "kernel"], default-features = false }

bitflags.workspace = true
crc32fast.workspace = true
illumos.workspace = true
postcard.workspace = true
serde.workspace = true

[lib]
crate-type = ["cdylib"]
name = "xde"
bench = false
test = false
