[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
