[package]
name = "opte-ioctl"
version = "0.1.0"
authors = ["Ryan Zezeski <ryan@oxide.computer>"]
edition = "2021"

[dependencies]
opte = { workspace = true, default-features = false, features = ["api"] }
oxide-vpc = { workspace = true, default-features = false, features = ["api"] }

libc.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "illumos")'.dependencies]
libnet.workspace = true

