[package]
name = "opte-test-utils"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]

[dependencies]
opte.workspace = true
oxide-vpc = { workspace = true, features = ["engine", "test-help", "usdt"] }
pcap-parser = { workspace = true, features = ["serialize"] }
smoltcp.workspace = true
