[package]
name = "opte-test-utils"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
usdt = ["oxide-vpc/usdt"]

[dependencies]
anyhow.workspace = true
opte = { workspace = true, features = ["std"] }
oxide-vpc = { workspace = true, features = ["engine", "std", "test-help"] }
pcap-parser = { workspace = true, features = ["serialize"] }
smoltcp.workspace = true
