[package]
name = "opte"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["api", "std"]
api = []
engine = ["api"]
kernel = ["illumos-sys-hdrs/kernel"]
# This feature indicates that OPTE is being built with std. This is
# mostly useful to consumers of the API, providing convenient methods
# for working with the API types in a std context.
std = ["opte-api/std"]
#
# Used for declaring methods which are useful for integration testing.
#
test-help = []
usdt = ["std", "dep:usdt"]

[dependencies]
illumos-sys-hdrs.workspace = true
kstat-macro.workspace = true
opte-api.workspace = true

cfg-if.workspace = true
dyn-clone.workspace = true
postcard.workspace = true
serde.workspace = true
usdt = { workspace = true, optional = true }
zerocopy.workspace = true

[dependencies.smoltcp]
workspace = true
default-features = false
#
# TODO Would defmt be of any use?
#
features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-ipv6", "proto-dhcpv4", "socket", "socket-raw"]

[build-dependencies]
version_check.workspace = true

[dev-dependencies]
# Enable usdt probes for testing.
opte = { workspace = true, features = ["usdt"] }

itertools.workspace = true
